# filedrop

./: .gitignore  Cargo.toml  install.sh  install_build_windows.bat  install_linux.sh  install_linux_path.sh  install_windows.bat  linux_install.sh  startup_windows.bat
filedrop/: Cargo.toml  filedrop.desktop
filedrop/src/: localdata.rs  main.rs
filedrop_daemon/: Cargo.toml  filedrop_daemon.desktop
filedrop_daemon/src/: main.rs  notifier.rs
filedrop_lib/: Cargo.toml
filedrop_lib/src/: lib.rs
filedrop_server/: Cargo.toml
filedrop_server/src/: db.rs  main.rs  subscribe.rs  upload.rs  users.rs
