[package]
name = "filedrop_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
tokio = { version = "1.30.0", features = ["full"] }
anyhow = "*"
tower-http = { version = "0.4.3", features = ["fs"] }
futures = "0.3.28"
uuid = { version = "*", features = ["v4"] }
filedrop_lib = { path = "../filedrop_lib" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres"] }
dotenv = "*"